<resources>
    <string name="app_name">TrainWithMe</string>
    <string name="facebook_app_id">1790883034496045</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="plan_travel">Plan travel</string>
    <string name="find_people">Find people</string>
    <string name="day">Day</string>
    <string name="departure_station">Departure station</string>
    <string name="final_station">Final station</string>
    <string name="sure_exit">Are you sure, you want exit?</string>
    <string name="exit">Exit</string>
    <string name="departure_time">Departure time</string>
    <string name="set">Set</string>
    <string name="check">Check</string>
    <string name="no_people_found_c">No people found :C</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="set_date">Set date</string>
    <string name="arts">Arts</string>
    <string name="default_media_location_folder">TrainWithMe</string>
</resources>
