<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="Monday"
                android:id="@+id/tv_day"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure_station"
                android:layout_below="@id/tv_day"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="Poznań"
                android:layout_below="@+id/tv_day"
                android:id="@+id/tv_departure_station"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_station"
                android:layout_below="@id/tv_departure_station"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:text="Warszawa"
                android:layout_below="@+id/tv_departure_station"
                android:id="@+id/tv_final_station"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>