<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.trainwithme.activities.LoginActivity"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/main_container"
    android:paddingTop="20dp">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/login_form"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="180dp"
                android:src="@drawable/title_logo"/>
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <AutoCompleteTextView
                    android:textColor="@android:color/white"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:gravity="center"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/password"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:gravity="center"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_gradient"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/AppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:textStyle="bold" />
            <Button
                android:id="@+id/debug_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                style="@style/AppButton"
                android:text="Debug fill login and pass"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="gone"/>

            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:minHeight="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:id="@+id/fb_login"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginBottom="12dp"/>
        </LinearLayout>
    </RelativeLayout>
        </LinearLayout>
</LinearLayout>
